[package]
name = "lumberjack-axe"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
tray-icon = "0.10"
crossbeam-channel = "0.5"
aws-config = "1.5.0"
aws-sdk-cloudwatchlogs = "1.26.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
thiserror = "1.0"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
